# freeman

./: .gitignore  CLAUDE.md  README.md  USAGE.md  build.gradle.kts  build.py  config.yaml  go.mod  go.sum  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: release.yml
android/: build.gradle.kts
cmd/freeman/: call.go  daemon.go  install.go  lock.go  logs.go  main.go  menubar.go  uninstall.go
docs/: android.md  macos.md
freeman-kt/: .gitignore  build.gradle.kts  config.yaml  settings.gradle.kts
freeman-kt/android/: build.gradle.kts
freeman-kt/gradle/: libs.versions.toml
freeman-kt/macos/: build.gradle.kts
freeman-kt/scripts/: setup_models.sh
freeman-kt/shared/: build.gradle.kts
gradle/: libs.versions.toml
internal/agent/: agent.go
internal/api/: server.go
internal/audio/: audio.go  audio_test.go
internal/buffer/: buffer.go
internal/call/: effects.go  events.go  (+8 more)
macos/: build.gradle.kts
prompts/: freeman.md
scripts/: bundle_voices.py  freeman.rb  install.sh  pi_login.sh  release-run.sh  setup_go_models.sh  setup_kotlin_libs.sh  setup_models.sh  setup_wakeword_models.sh  setup_whisper_model.sh  train_wakeword.sh
shared/: build.gradle.kts
sidecar/: conv-sidecar.ts  package.json  pm-sidecar.ts  sidecar.test.ts  sidecar.ts  stub.ts
src/: __init__.py  cli.py  config.py  sentence_buffer.py  server.py  session.py  tts_engine.py
static/: setup.html
tools/: active_window.md  clipboard_read.md  clipboard_write.md  file_search.md  open_app.md  read_file.md  screenshot.md  system_stats.md  web_fetch.md  web_search.md
(+163 files in other folders)
