[project]
name = "freeman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
    "kokoro>=0.8.4",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.26.0",
    "soundfile>=0.13.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "colorama>=0.4.6",
    "rich>=13.9.4",
    "nuitka>=2.8.10",
]
